[gd_scene load_steps=29 format=3 uid="uid://bfj7gejvah38c"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_hjqws"]
[ext_resource type="Texture2D" uid="uid://bc055dxtbw3b" path="res://assets/PlayerSprite02.png" id="2_7oxg1"]
[ext_resource type="Texture2D" uid="uid://ctf4romcrny7i" path="res://assets/AttackSprite01.png" id="3_4dmx8"]
[ext_resource type="Script" path="res://scripts/player_state_machine.gd" id="3_nqfb6"]
[ext_resource type="Script" path="res://scripts/state_idle.gd" id="4_sl1vc"]
[ext_resource type="Script" path="res://scripts/state_walk.gd" id="5_tcgpu"]
[ext_resource type="Script" path="res://scripts/state_attack.gd" id="6_t2rfg"]
[ext_resource type="AudioStream" uid="uid://cda8vspatxih7" path="res://assets/SwordSwoosh.wav" id="8_n8ciw"]
[ext_resource type="Texture2D" uid="uid://b1ajipu13rboa" path="res://assets/Shadow.png" id="9_a8okv"]
[ext_resource type="PackedScene" uid="uid://cfa745dmkg43h" path="res://general_nodes/hitter_box/HitterBox.tscn" id="10_5jht5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e0wuc"]
height = 20.0

[sub_resource type="Animation" id="Animation_rx4cu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwooshSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xjpi8"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwooshSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwooshSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwooshSprite:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m0d4a"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwooshSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwooshSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwooshSprite:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5dt5l"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwooshSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwooshSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwooshSprite:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5x4vl"]
_data = {
"RESET": SubResource("Animation_rx4cu"),
"attack_down": SubResource("Animation_xjpi8"),
"attack_side": SubResource("Animation_m0d4a"),
"attack_up": SubResource("Animation_5dt5l")
}

[sub_resource type="Animation" id="Animation_f6p6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d1l2w"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}

[sub_resource type="Animation" id="Animation_fq0ql"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [27, 29]
}

[sub_resource type="Animation" id="Animation_nxunj"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}

[sub_resource type="Animation" id="Animation_ojsfo"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_heosd"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_5sdf2"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rbnr3"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_1yp3j"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_rqmm8"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjkdi"]
_data = {
"RESET": SubResource("Animation_f6p6y"),
"attack_down": SubResource("Animation_d1l2w"),
"attack_side": SubResource("Animation_fq0ql"),
"attack_up": SubResource("Animation_nxunj"),
"idle_down": SubResource("Animation_ojsfo"),
"idle_side": SubResource("Animation_heosd"),
"idle_up": SubResource("Animation_5sdf2"),
"walk_down": SubResource("Animation_rbnr3"),
"walk_side": SubResource("Animation_1yp3j"),
"walk_up": SubResource("Animation_rqmm8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kobql"]
radius = 20.025

[node name="Player" type="CharacterBody2D"]
collision_mask = 272
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_hjqws")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_e0wuc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -20)
texture = ExtResource("2_7oxg1")
hframes = 16
vframes = 3

[node name="SwooshSprite" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("3_4dmx8")
hframes = 12

[node name="SwooshAnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_5x4vl")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jjkdi")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_nqfb6")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_sl1vc")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_tcgpu")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_t2rfg")
swoosh_sound = ExtResource("8_n8ciw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 4

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0.0392157, 0.0392157, 0.0392157, 0.756863)
show_behind_parent = true
position = Vector2(0, 1)
texture = ExtResource("9_a8okv")

[node name="HitterBox" parent="." instance=ExtResource("10_5jht5")]
collision_mask = 16

[node name="HurtShape" type="CollisionShape2D" parent="HitterBox"]
shape = SubResource("CircleShape2D_kobql")
